Azure_Kubernetes/3-tier_AKS/AddTaskTodoMicroservice/manifests/azurerm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msadd-task
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: msadd-task
  template:
    metadata:
      labels:
        app: msadd-task
    spec:
      containers:
      - name: msadd-task
        image: imdevacr89.azurecr.io/backend-addtask:v1
        ports:
        - containerPort: 8000
