Azure_Kubernetes/3-tier_AKS/AddTaskTodoMicroservice/manifests/azurerm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msadd-service
spec:
  type: ClusterIP
  selector:
    app: msadd-task
  ports:
  - port: 80
    targetPort: 8000
