Azure_Kubernetes/3-tier_AKS/AddTaskTodoMicroservice/manifests/azurerm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msadd-ingress   
spec:
  ingressClassName: nginx
  rules:
  - host: create.inframellow.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: msadd-service
            port: 
              number: 80
